<resources>
    <string name="app_name">                Kointlin</string>

    <!--PORTFOLIO-->
    <string name="portfolio_amount">        %s %s</string>
    <string name="portfolio_change">        %s %s</string>


    <!--NEW ASSET-->
    <string name="new_asset_hint">          Search coin</string>
    <string name="new_asset_amount">        Amount</string>
    <string name="new_asset_save">          Save</string>


    <!--NEWS-->
    <string name="news_title">              Latest News</string>


    <!--SETTINGS-->
    <string name="settings_title">          Settings</string>
    <string name="settings_app_version">    Kointlin v.%s</string>
    <string name="settings_currency_title"> Set default currency</string>
    <string name="settings_currency_change">Change currency</string>
    <string name="settings_currency_disp">  %s (%s)</string>


    <!--URL-->
    <string name="image_downloader_url">https://coincap.io/images/coins/imageId.png</string>

</resources>
